--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,52 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "JetBrains Mono",monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  display: flexbox;
+  padding: 2rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: blue;
+}
+
+.div-table {
+  border: 1px solid;
+  margin-left: 10em;
+  margin-right: 10em;
+  text-align: left;
+}
+
+.input-name {
+  margin-right: 2em;
+  margin-bottom: 0.2em;
+}
+.input-skill {
+  margin-bottom: 0.2em;
+}
+
+.btn {
+  margin-top: 0.2em;
+  font-family: "JetBrains Mono",monospace;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn-plus {
+  margin-left: 0.2em;
+  font-family: "JetBrains Mono",monospace;
+}
+
+.btn-plus:hover {
+  cursor: pointer;
 }
 
 code {
